[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Actors/EnemyOne/EnemyOne.gd" type="Script" id=1]
[ext_resource path="res://assets/enemyOneSpriteSheet.png" type="Texture" id=2]

[sub_resource type="AnimatedTexture" id=2]

[sub_resource type="CircleShape2D" id=5]
radius = 79.4426

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.97826, 15.5797 )

[sub_resource type="Animation" id=3]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="EnemyOne" type="KinematicBody2D"]
scale = Vector2( 5.52, 5.52 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.188, 0.188 )
texture = ExtResource( 2 )
normal_map = SubResource( 2 )
hframes = 6
vframes = 8
frame = 18

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.08696, 2.89855 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_DetectRadius_body_exited"]
